--- a/app/elements/widget/convospot-widget.html
+++ b/app/elements/widget/convospot-widget.html
@@ -22,6 +22,7 @@
             --color-one: #3d3d3d;
             --color-two: #9b4dca;
             --color-three: #C3C3E5;
+            z-index: 9998;
         }
 
         .circle {
