--- a/app/elements/sidebar/convospot-sidebar-welcome.html
+++ b/app/elements/sidebar/convospot-sidebar-welcome.html
@@ -37,7 +37,7 @@
             <convospot-bot emotion="happy"></convospot-bot>
             <div class="dialog arrow_box">
                 <div class="intro">
-                    <p>Meet our convospot.
+                    <p>Meet convospot.
                         <br/> An intelligent assistant who can:
                     </p>
                 </div>
@@ -54,7 +54,7 @@
                     <span>Instant help</span>
                 </div>
                 <div class="action">
-                    <span><paper-button class="small primary borderless">Learn more</paper-button></span><span><paper-button class="small primary borderless">Got it</paper-button></span>
+                    <span><paper-button class="small primary borderless"><a href="http://www.reflen.com">Learn more</a></paper-button></span>
                 </div>
             </div>
         </template>
