--- a/app/elements/widget/convospot-widget.html
+++ b/app/elements/widget/convospot-widget.html
@@ -166,7 +166,7 @@
             position: absolute;
             bottom: 0;
             font-size: 0.65rem;
-            background: #4db2b3;
+            background: #9013FE;
             padding: 3px;
             line-height: 0.5rem;
             font-weight: bolder;
