--- a/app/elements/overlay/overlay-highlight.html
+++ b/app/elements/overlay/overlay-highlight.html
@@ -1,6 +1,7 @@
 <!-- this is the entry point for selected card -->
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../styles/custom-styles.html">
 <link rel="import" href="../../styles/share-styles.html">
 <link rel="import" href="../core/cache.html">
@@ -34,7 +35,23 @@
         color: white;
         position: fixed; /* Stay in place */
         z-index: 9998; /* Sit on top */
-        padding: 15px
+        padding: 15px;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+    }
+    .message-action {
+        margin-top: 20px;
+    }
+    paper-button.green {
+      background-color: var(--paper-green-500);
+      color: white;
+      padding: 0.2em 0.2em;
+    }
+    .power {
+            position: absolute;
+            bottom: 0;
+            right: 4px;
+            font-size: 10px;
     }
     </style>
     <template>
@@ -46,6 +63,11 @@
            </div> 
            <div class="reflen-highlight-content" style$="top:{{rect.bottom}}px;left:{{rect.left}}px;">
                 <div>{{message}}</div>
+                <div class="message-action">
+                    <paper-button raised class="green">Proceed</paper-button>
+                    <paper-button raised class="green">Cancel</paper-button>
+                </div>
+                <div class="power">Power by Reflen</div>
             </div>
         </template>
     </template>
