--- a/app/elements/console/train-console.html
+++ b/app/elements/console/train-console.html
@@ -18,11 +18,12 @@
         color: white;
         z-index: 9999;
         background: #eee;
-        height:  calc(100% - 40px);
-        width: 400px;
+        height:  400px;
+        width: calc(100% - 425px);
         left: 20px;
         border-radius: 10px;
         padding: 15px 20px;
+        opacity: 0.9;
     }
 
     .console-control {
