--- a/app/elements/cards/convospot-action-card.html
+++ b/app/elements/cards/convospot-action-card.html
@@ -57,7 +57,7 @@
             }
         },
         _isType: function(item, type) {
-            return item.data.action === type;
+            return item.action === type;
         },
         _getShow: function(item) {
             return !item.acted;
