--- a/demo/simple/demo.html
+++ b/demo/simple/demo.html
@@ -84,7 +84,7 @@
                     </ul>
                     <div id="test"></div>
     </section>
-    <script src="http://widget.stage.reflen.com/convospot.js" bid="093170df-793e-44c8-923f-7a1b4cad136a" token="Q1QznSj9qDh-UjYw" async></script>
+    <script src="http://widget.dev.reflen.com/convospot.js" bid="093170df-793e-44c8-923f-7a1b4cad136a" token="Q1QznSj9qDh-UjYw" async></script>
 
 </body>
 
