--- a/demo/simple/index.html
+++ b/demo/simple/index.html
@@ -84,7 +84,7 @@
                     </ul>
                     <div id="test"></div>
     </section>
-    <script src="http://localhost:8005/convospot.js" bid="5f9efca2-c423-49d1-84f8-72981a07d430" token="Z5lHSSvEnVdPZUhk" async></script>
+    <script src="http://widget.dev.reflen.com/convospot.js" bid="5f9efca2-c423-49d1-84f8-72981a07d430" token="Z5lHSSvEnVdPZUhk" async></script>
 </body>
 
 </html>
