--- a/app/elements/console/train-console.html
+++ b/app/elements/console/train-console.html
@@ -75,11 +75,10 @@
                             </ul>
                         </div>
                         <div>
-                            <div class="square_option" on-tap="_add_smart_form">SmartForm</div>
-                            <div class="square_option" on-tap="_add_smart_convo">SmartConvo</div>
-                            <div class="square_option">Overall Advice</div>
-                            <div class="square_option">Input Advice</div>
-                            <div class="square_option">Video/Audio narrative</div>
+                            <div class="square_option" on-tap="_add_smart_form">Form</div>
+                            <div class="square_option" on-tap="_add_smart_convo">Conversation</div>
+                            <div class="square_option">Template</div>
+                            <div class="square_option">Notification</div>
                         </div>
                     </iron-pages>
                 </div>
