--- a/app/elements/console/train-console.html
+++ b/app/elements/console/train-console.html
@@ -28,6 +28,7 @@
     .console-control {
         position: absolute;
         right: -40px;
+        top: 40px;
         background: #eee;
     }
 
