--- a/app/elements/smartconvo/convospot-sidebar-welcome.html
+++ b/app/elements/smartconvo/convospot-sidebar-welcome.html
@@ -41,22 +41,24 @@
             <convospot-bot emotion="happy"></convospot-bot>
             <div class="dialog arrow_box">
                 <div class="intro">
-                    <p>Please answer following questions
-                        <br /> before start to refer a candidate:
+                    <p>Please answer the following pre-screening
+                        <br /> questions about your candidate
                     </p>
                 </div>
                 <template is="dom-repeat" items="{{steps}}">
-                    <div>
-                        <paper-icon-button icon="communication:chat-bubble-outline" class="primary small"></paper-icon-button>
-                        <div>{{item.text}}</div>
-                        <template is="dom-if" if="{{_isTextType(item)}}" strip-whitespace>
-                             <paper-input always-float-label></paper-input>
-                        </template>
-                        <template is="dom-if" if="{{_isRangeType(item)}}" strip-whitespace>
-                            <paper-slider value="183" max="255" secondary-progress="200" editable>
-                            </paper-slider>
-                        </template>
-                    </div>
+                    <template is="dom-if" if="{{_checkCondition(item)}}" strip-whitespace>
+                        <div>
+                            <paper-icon-button icon="communication:chat-bubble-outline" class="primary small"></paper-icon-button>
+                            <div>{{item.text}}</div>
+                            <template is="dom-if" if="{{_isTextType(item)}}" strip-whitespace>
+                                <paper-input always-float-label></paper-input>
+                            </template>
+                            <template is="dom-if" if="{{_isRangeType(item)}}" strip-whitespace>
+                                <paper-slider value="183" max="255" secondary-progress="200" editable>
+                                </paper-slider>
+                            </template>
+                        </div>
+                    </template>
                 </template>
                 <div class="action">
                     <span><paper-button class="small primary borderless">DONE</paper-button></span>
@@ -89,6 +91,10 @@
         _isRangeType: function(item) {
             return item['ui:widget'] === 'range';
         },
+        // TODO: demo only
+        _checkCondition: function(item) {
+            return !item.condition || (item.condition.value && this.context[1].value<4);
+        }
     });
 })();
 </script>
